# Airbnb-Analysis

./: .dockerignore  .gitignore  .python-version  .~lock.final_df.csv#  .~lock.new.csv#  Airbnb Exploratory Data Analysis.html  Dockerfile  README.md  St_app.py  \  create_alias.ps1.txt  custom.css  dark_theme.css  environment.yaml  final.csv  final_df.csv  jupyterlab.ps1  new.csv  new.ods  pyproject.toml  requirements.txt  test.html
.github/workflow/: gh_ac.toml
.github/workflows/: python-app.yml
.streamlit/: config.toml
Airbnb Exploratory Data Analysis_files/: saved_resource(1).html  saved_resource(10).html  saved_resource(11).html  saved_resource(12).html  saved_resource(13).html  saved_resource(14).html  saved_resource(2).html  saved_resource(3).html  saved_resource(4).html  saved_resource(5).html  saved_resource(6).html  saved_resource(7).html  saved_resource(8).html  saved_resource(9).html  saved_resource.html
EDA_files/libs/bootstrap/: bootstrap.min.css
PBI/: PBI_assets.html
PBI/Full Page/: Airbnb - Power BI.html
PBI/Full Page/Airbnb - Power BI_files/: azureMapVisuals.min.733b6cca0e00700914c3.css  baseMetadataProvider.min.63a90ebd2ac725fc278c.js.download  hash-manifest.js.download  powerbiportal.bundle.min.a8d66d32748bf0154a2f.css  powerbiportal.smalldep.externals.bundle.min.5ab74553632c96660103.js.download  signInProvider.min.2beaea94e289ef22796a.js.download  undefined  web.clients.min.980c00f20772d372716d.js.download  web.vendors.min.3ef8a8e83126b75ea26b.js.download
Tableau/: Airbnb_Tableau.twb
