[tool.uv]
managed = true


[project]
name = "airbnb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "pymongo>=4.16.0",
    "ruff>=0.14.14",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statistics>=1.0.3.5",
    "streamlit>=1.53.1",
    "streamlit-extras>=0.7.8",
    "streamlit-option-menu>=0.4.0",
    "streamlit-player>=0.1.5",
]
